Fixed sonar errors